--- a/HoE.UseCase/HoE.UseCase.csproj
+++ b/HoE.UseCase/HoE.UseCase.csproj
@@ -10,4 +10,8 @@
     <Folder Include="PluginInterfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HoE.CoreBusiness\HoE.CoreBusiness.csproj" />
+  </ItemGroup>
+
 </Project>
