--- a/HoE.Plugins.InMemory/HoE.Plugins.InMemory.csproj
+++ b/HoE.Plugins.InMemory/HoE.Plugins.InMemory.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HoE.CoreBusiness\HoE.CoreBusiness.csproj" />
+    <ProjectReference Include="..\HoE.UseCase\HoE.UseCase.csproj" />
   </ItemGroup>
 
 </Project>
