zmiana metod na zapis do SQL

--- a/HoE.Plugins/HoE.Plugins.EFCoreSqlServer/HoE.Plugins.EFCoreSqlServer.csproj
+++ b/HoE.Plugins/HoE.Plugins.EFCoreSqlServer/HoE.Plugins.EFCoreSqlServer.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\HoE.CoreBusiness\HoE.CoreBusiness.csproj" />
+    <ProjectReference Include="..\..\HoE.Plugins.InMemory\HoE.Plugins.InMemory.csproj" />
   </ItemGroup>
 
 </Project>
