--- a/HoE/Properties/launchSettings.json
+++ b/HoE/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "launchBrowser": true,
         "applicationUrl": "http://localhost:5285",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Testing"
         }
       },
       "https": {
@@ -24,14 +24,14 @@
         "launchBrowser": true,
         "applicationUrl": "https://localhost:7234;http://localhost:5285",
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Testing"
         }
       },
       "IIS Express": {
         "commandName": "IISExpress",
         "launchBrowser": true,
         "environmentVariables": {
-          "ASPNETCORE_ENVIRONMENT": "Development"
+          "ASPNETCORE_ENVIRONMENT": "Testing"
         }
       }
     }
